# test_for_cc

./: .gitignore  README.md  manage.py  pyproject.toml
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
test_for_cc/: asgi.py  settings.py  urls.py  wsgi.py
user/: serializers.py  views.py
user/migrations/: 0001_initial.py
